feat(mind-cli): surface adapter info and align with sdk exports
- Move knowledge/platform types to sdk facade and add adapter info to rag index
- Update CLI commands, handlers, manifest, and sync flows
- Align mind-engine/platform configs and orchestrator build outputs

--- a/packages/mind-engine/tsconfig.build.json
+++ b/packages/mind-engine/tsconfig.build.json
@@ -3,7 +3,15 @@
   "compilerOptions": {
     "outDir": "dist",
     "baseUrl": ".",
-    "paths": {}
+    "paths": {},
+    "moduleResolution": "bundler",
+    "module": "ESNext",
+    "target": "ES2022",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "declarationDir": "dist",
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*"
