--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -9,9 +9,6 @@
       "@kb-labs/analytics-sdk-node/*": [
         "../kb-labs-analytics/packages/analytics-sdk-node/src/*"
       ],
-      "@kb-labs/core": [
-        "../kb-labs-core/src/index.ts"
-      ],
       "@kb-labs/core-platform": [
         "../kb-labs-core/packages/core-platform/src/index.ts"
       ],
@@ -24,20 +21,11 @@
       "@kb-labs/core-runtime/*": [
         "../kb-labs-core/packages/core-runtime/src/*"
       ],
-      "@kb-labs/core-sandbox": [
-        "../kb-labs-core/packages/core-sandbox/src/index.ts"
-      ],
-      "@kb-labs/core-sandbox/*": [
-        "../kb-labs-core/packages/core-sandbox/src/*"
-      ],
       "@kb-labs/core-sys": [
         "../kb-labs-core/packages/core-sys/src/index.ts"
       ],
       "@kb-labs/core-sys/*": [
         "../kb-labs-core/packages/core-sys/src/*"
-      ],
-      "@kb-labs/core/*": [
-        "../kb-labs-core/src/*"
       ],
       "@kb-labs/knowledge-contracts": [
         "../kb-labs-knowledge/packages/knowledge-contracts/src/index.ts"
@@ -117,23 +105,11 @@
       "@kb-labs/mind-vector-store/*": [
         "packages/mind-vector-store/src/*"
       ],
-      "@kb-labs/plugin-manifest": [
-        "../kb-labs-plugin/packages/plugin-manifest/src/index.ts"
+      "@kb-labs/sdk": [
+        "../kb-labs-sdk/packages/sdk/src/index.ts"
       ],
-      "@kb-labs/plugin-manifest/*": [
-        "../kb-labs-plugin/packages/plugin-manifest/src/*"
-      ],
-      "@kb-labs/shared-cli-ui": [
-        "../kb-labs-shared/packages/shared-cli-ui/src/index.ts"
-      ],
-      "@kb-labs/shared-cli-ui/*": [
-        "../kb-labs-shared/packages/shared-cli-ui/src/*"
-      ],
-      "@kb-labs/shared-command-kit": [
-        "../kb-labs-shared/packages/shared-command-kit/src/index.ts"
-      ],
-      "@kb-labs/shared-command-kit/*": [
-        "../kb-labs-shared/packages/shared-command-kit/src/*"
+      "@kb-labs/sdk/*": [
+        "../kb-labs-sdk/packages/sdk/src/*"
       ]
     }
   }
