--- a/packages/mind-orchestrator/package.json
+++ b/packages/mind-orchestrator/package.json
@@ -29,6 +29,7 @@
     "test:watch": "vitest --passWithNoTests"
   },
   "dependencies": {
+    "@kb-labs/core-platform": "link:../../../kb-labs-core/packages/core-platform",
     "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/core-sys",
     "@kb-labs/knowledge-contracts": "link:../../../kb-labs-knowledge/packages/knowledge-contracts",
     "@kb-labs/mind-engine": "link:../mind-engine",
