--- a/packages/mind-engine/package.json
+++ b/packages/mind-engine/package.json
@@ -37,11 +37,7 @@
     "test:watch": "vitest --passWithNoTests"
   },
   "dependencies": {
-    "@kb-labs/core-runtime": "link:../../../kb-labs-core/packages/core-runtime",
-    "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/core-sys",
-    "@kb-labs/core-platform": "link:../../../kb-labs-core/packages/core-platform",
-    "@kb-labs/knowledge-contracts": "link:../../../kb-labs-knowledge/packages/knowledge-contracts",
-    "@kb-labs/knowledge-core": "link:../../../kb-labs-knowledge/packages/knowledge-core",
+    "@kb-labs/sdk": "link:../../../kb-labs-sdk/packages/sdk",
     "@kb-labs/mind-embeddings": "link:../mind-embeddings",
     "@kb-labs/mind-llm": "link:../mind-llm",
     "@kb-labs/mind-types": "link:../mind-types",
