--- a/packages/mind-core/package.json
+++ b/packages/mind-core/package.json
@@ -38,7 +38,9 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@kb-labs/mind-types": "workspace:*"
+    "@kb-labs/sdk": "link:../../../kb-labs-sdk/packages/sdk",
+    "@kb-labs/mind-types": "workspace:*",
+    "@kb-labs/mind-indexer": "link:../mind-indexer"
   },
   "engines": {
     "node": ">=20.0.0",
