--- a/packages/mind-core/tsconfig.build.json
+++ b/packages/mind-core/tsconfig.build.json
@@ -10,6 +10,9 @@
   ],
   "exclude": [
     "dist",
-    "node_modules"
+    "node_modules",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "**/__tests__/**"
   ]
 }
