--- a/packages/mind-vector-store/package.json
+++ b/packages/mind-vector-store/package.json
@@ -29,7 +29,8 @@
     "test:watch": "vitest --passWithNoTests"
   },
   "dependencies": {
-    "@kb-labs/knowledge-contracts": "link:../../../kb-labs-knowledge/packages/knowledge-contracts",
+    "@kb-labs/sdk": "link:../../../kb-labs-sdk/packages/sdk",
+    "@kb-labs/mind-core": "link:../mind-core",
     "fs-extra": "^11.0.0"
   },
   "devDependencies": {
